--- a/gallery/Fests/css/component.css
+++ b/gallery/Fests/css/component.css
@@ -17,7 +17,7 @@
 }
 
 .js .photostack {
-	height: 580px;
+	height: 830px;
 }
 
 .photostack-start {
@@ -34,8 +34,6 @@
 }
 
 .photostack figure {
-	width: 320px;
-	height: 360px;
 	position: relative;
 	display: inline-block;
 	background: #fff;
@@ -48,20 +46,19 @@
 	position: absolute;
 	display: block;
 	margin: 0;
+	padding: 0;
 }
 
 .photostack figcaption h2 {
-	margin: 20px 0 0 0;
-	color: #a7a0a2;
+	color: #6c6366;
 	font-size: 16px;
 }
 
 .photostack-img {
 	outline: none;
 	display: block;
-	width: 240px;
-	height: 240px;
 	background: #f9f9f9;
+	padding: 5px;
 }
 
 .photostack-back {
@@ -94,11 +91,12 @@
 	position: absolute;
 	width: 100%;
 	bottom: 30px;
-	z-index: 90;
+	z-index: 99999;
 	text-align: center;
 	left: 0;
 	-webkit-transition: opacity 0.3s;
 	transition: opacity 0.3s;
+	background: rgba(0,0,0,0.5);
 }
 
 .photostack-start nav {
