--- a/socities-carousel/carousel.css
+++ b/socities-carousel/carousel.css
@@ -1,17 +1,16 @@
 
 .container1 {
     margin: 0 auto;
-    width: 250px;
-    height: 200px;
+    width: 278px;
+    height: 283px;
     position: relative;
-    perspective: 2000px;
+    perspective: 3854px;
   }
 
   .carousel1 {
-    width: 400px;
+    width: 278px;
     transform-style: preserve-3d;
     transition: transform 1s;
-    margin-left: -50px;
 }
 
   .item {
@@ -94,7 +93,7 @@
         border: solid;
         background: white;
         width: 200px;
-        height: 500px;
+        height: 320px;
         border-radius: 10px;
         padding: 2px 10px 2px 10px;
     }
@@ -135,13 +134,13 @@
 
     .next1 {
         right: 0em;
-        top: 35em;
+        top: 26em;
         background-color: #999;
     }
 
     .prev1 {
         left: 0em;
-        top: 35em;
+        top: 26em;
         background-color: #999;
     }
 
@@ -152,7 +151,7 @@
 
     .next1:active,
     .prev1:active {
-        top: 35.2em;
+        top: 26.2em;
         box-shadow: 0 1px 0 rgb(95, 93, 93);
     }
 }
